--- a/tour/css/style.css
+++ b/tour/css/style.css
@@ -13,6 +13,21 @@
         background-color: lightblue;  
         text-align: center;
     }
+
+    .n3{
+        background-color: rgb(62, 174, 226) ;  
+        text-align: center;
+    }
+
+    .n4{
+        background-color: rgb(62, 174, 226);
+        text-align: center;
+    }
+
+    .d6{
+        background-color: lightblue;
+        text-align: left;
+    }
     .d1{
         border: 1px;
     }
@@ -30,4 +45,20 @@
     }
     .a1{
         border: 3px solid black;
+        background-color: rgb(62, 174, 226);
+        padding: 10px;
+        width: 600px;
+        height: 100px;
+    }
+
+    .left1
+    {
+        float: left;
+        width: 50%;
+        background-color: lightblue;
+    }
+
+    .right1{
+        text-align: right;
+        background-color: lightblue;
     }
