Виправила майже всі помилки на сторінці Норвегії

--- a/tour/css/style.css
+++ b/tour/css/style.css
@@ -1,4 +1,7 @@
 
+    .body{
+        background-color:  #F7DAE9;
+    }
     .center{
         text-align: center ;
         }
@@ -108,6 +111,7 @@
         .n2
         {
             text-align: center;
+            font-weight: bold;
         }
     
         .d1{
@@ -241,7 +245,7 @@
            .t1{
             overflow: scroll; 
             width: 670px; 
-            height: 750px; 
+            height: 735px; 
             padding: 5px; 
             border: solid 1px black;
             background-color: rgb(240, 150, 170);
